name:                wai-jwt
version:             0.1.0
synopsis:            [wai middleware] auth with jwt
description:         auth with jwt
license-file:        LICENSE
author:              uuhan
maintainer:          https://github.com/uuhan/wai-jwt
copyright:           MIT
category:            Web         
build-type:          Simple
extra-source-files:  
    README
cabal-version:       >=1.10

library
    hs-source-dirs:    src
    default-language:  Haskell2010
    ghc-options:       -Wall
    exposed-modules:   
        Network.Wai.Middleware.JWT 
        Network.Wai.Middleware.JWT.Internal
        Network.Test.Yesod
    build-depends:     base >=4.8 && < 4.9
                     , jwt
                     , time
                     , text
                     , bytestring
                     , wai
                     , wai-extra
                     , case-insensitive >=0.2 && <1.3
                     , http-types
                     , yesod
                     , yesod-static

executable jwt
    main-is:           wai-jwt.hs
    hs-source-dirs:    bin
    default-language:  Haskell2010
    ghc-options:       -Wall
                       -threaded -rtsopts -with-rtsopts=-N
    build-depends:     base >=4.8 && < 4.9
                     , wai
                     , wai-extra
                     , wai-jwt
                     , warp
                       
test-suite test
    type:              exitcode-stdio-1.0
    main-is:           Spec.hs
    hs-source-dirs:    test bin
    default-language:  Haskell2010
    ghc-options:       -Wall
    other-modules:     
    build-depends:     base == 4.*
                     , jwt
                     , wai-jwt
                     , hspec
                     , hspec-wai
                     , containers
                     , data-default
                     , aeson
