name:                wai-jwt
version:             0.1.0
synopsis:            [wai middleware] auth with jwt
description:         auth with jwt
license-file:        LICENSE
author:              uuhan
maintainer:          https://github.com/uuhan/wai-jwt
copyright:           MIT
category:            Web         
build-type:          Simple
extra-source-files:  
    README
cabal-version:       >=1.10

flag binary
    description:      Build Binary
    default:          False

library
    hs-source-dirs:    src
    default-language:  Haskell2010
    ghc-options:       -Wall
    exposed-modules:   
        Network.Wai.Middleware.JWT 
    build-depends:     base >=4.8 && < 4.9
                     , jwt
                     , time
                     , text
                     , bytestring
                     , wai
                     , case-insensitive >=0.2 && <1.3
                     , http-types

executable wai-jwt
    main-is:           wai-jwt.hs
    hs-source-dirs:    bin
    default-language:  Haskell2010
    build-depends:     base >=4.8 && < 4.9
                     , http-types
                     , wai
                     , wai-jwt
                     , warp

    if flag(binary)
        buildable:     True
    else
        buildable:     False
                       
test-suite test
    type:              exitcode-stdio-1.0
    main-is:           Spec.hs
    hs-source-dirs:    test bin
    default-language:  Haskell2010
    ghc-options:       -Wall
    other-modules:     
    build-depends:     base == 4.*
                     , jwt
                     , http-types
                     , wai
                     , wai-jwt
                     , hspec
                     , hspec-wai
                     , data-default
                     , aeson

source-repository head
    type     : git
    location : https://github.com/uuhan/wai-jwt
